feat: refactoring account info

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -1046,5 +1046,8 @@
   "error_set_commitment": "Грешка при актуализиране на ангажимента за добив. Имайте предвид, че трябва да изчакате 1440 блока, преди да можете да оттеглите ангажимента си.",
   "commitment_blocks_enabled": "блокира липсващи, докато ангажиментът може да бъде отменен",
   "no_reward_recipient": "Все още нямате настроен получател на награда",
-  "commitment_unsupported": "Понастоящем избраният възел не поддържа задължение за копаене. Моля, изберете възел с поне версия 3+."
+  "commitment_unsupported": "Понастоящем избраният възел не поддържа задължение за копаене. Моля, изберете възел с поне версия 3+.",
+  "click_for_request": "Щракнете, за да създадете заявка за плащане, която може да се използва от трети страни",
+  "copy_account_address_extended": "Копирайте разширения адрес",
+  "copy_account_publickey": "Копирайте публичния ключ"
 }
