--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -1046,5 +1046,8 @@
   "error_set_commitment": "Σφάλμα κατά την ενημέρωση της δέσμευσης εξόρυξης. Λάβετε υπόψη ότι πρέπει να περιμένετε 1440 τετράγωνα για να μπορέσετε να ανακαλέσετε τη δέσμευσή σας.",
   "commitment_blocks_enabled": "λείπουν μπλοκ μέχρι να ανακληθεί η δέσμευση",
   "no_reward_recipient": "Δεν έχετε ακόμη σύνολο παραληπτών ανταμοιβής",
-  "commitment_unsupported": "Ο τρέχων επιλεγμένος κόμβος δεν υποστηρίζει Mining Commitment. Επιλέξτε έναν κόμβο με τουλάχιστον έκδοση 3+."
+  "commitment_unsupported": "Ο τρέχων επιλεγμένος κόμβος δεν υποστηρίζει Mining Commitment. Επιλέξτε έναν κόμβο με τουλάχιστον έκδοση 3+.",
+  "click_for_request": "Κάντε κλικ για να δημιουργήσετε ένα αίτημα πληρωμής που μπορεί να χρησιμοποιηθεί από τρίτους",
+  "copy_account_address_extended": "Αντιγραφή εκτεταμένης διεύθυνσης",
+  "copy_account_publickey": "Αντιγραφή δημόσιου κλειδιού"
 }
