--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -1046,5 +1046,8 @@
   "error_set_commitment": "Ошибка при обновлении обязательств по добыче полезных ископаемых. Имейте в виду, что вам нужно подождать 1440 блоков, прежде чем вы сможете отозвать свое обязательство.",
   "commitment_blocks_enabled": "блоки отсутствуют, пока обязательство не может быть отозвано",
   "no_reward_recipient": "У вас еще нет получателя вознаграждения",
-  "commitment_unsupported": "Текущий выбранный узел не поддерживает обязательства по майнингу. Выберите узел как минимум с версией 3+."
+  "commitment_unsupported": "Текущий выбранный узел не поддерживает обязательства по майнингу. Выберите узел как минимум с версией 3+.",
+  "click_for_request": "Нажмите, чтобы создать запрос на оплату, который может использоваться третьими сторонами",
+  "copy_account_address_extended": "Копировать расширенный адрес",
+  "copy_account_publickey": "Копировать открытый ключ"
 }
