--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -1046,5 +1046,8 @@
   "error_set_commitment": "Грешка приликом ажурирања обавезе о рударству. Имајте на уму да требате сачекати 1440 блокова да бисте могли опозвати своју обавезу.",
   "commitment_blocks_enabled": "недостају блокови док се не може опозвати обавеза",
   "no_reward_recipient": "Још увек нисте поставили примаоца награде",
-  "commitment_unsupported": "Тренутно изабрани чвор не подржава обавезу рударства. Изаберите чвор са најмање верзијом 3+."
+  "commitment_unsupported": "Тренутно изабрани чвор не подржава обавезу рударства. Изаберите чвор са најмање верзијом 3+.",
+  "click_for_request": "Кликните да бисте креирали захтев за плаћање који могу користити треће стране",
+  "copy_account_address_extended": "Копирајте проширену адресу",
+  "copy_account_publickey": "Копирај јавни кључ"
 }
