--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -1046,5 +1046,8 @@
   "error_set_commitment": "Помилка під час оновлення зобов’язання щодо майнінгу. Пам’ятайте, що вам потрібно почекати 1440 блоків, перш ніж ви зможете скасувати своє зобов’язання.",
   "commitment_blocks_enabled": "відсутні блоки, поки зобов’язання не може бути скасовано",
   "no_reward_recipient": "Ви ще не встановили одержувача винагороди",
-  "commitment_unsupported": "Наразі вибраний Вузол не підтримує зобов'язання Майнінг. Виберіть вузол із принаймні версією 3+."
+  "commitment_unsupported": "Наразі вибраний Вузол не підтримує зобов'язання Майнінг. Виберіть вузол із принаймні версією 3+.",
+  "click_for_request": "Натисніть, щоб створити платіжний запит, яким можуть скористатися треті сторони",
+  "copy_account_address_extended": "Скопіюйте розширену адресу",
+  "copy_account_publickey": "Скопіюйте відкритий ключ"
 }
