--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -1046,5 +1046,8 @@
   "error_set_commitment": "Error en actualitzar el compromís de mineria. Tingueu en compte que cal esperar 1.440 blocs per poder revocar el vostre compromís.",
   "commitment_blocks_enabled": "falten blocs fins que es pugui revocar el compromís",
   "no_reward_recipient": "Encara no teniu cap destinatari de recompensa definit",
-  "commitment_unsupported": "El node seleccionat actualment no admet el compromís de mineria. Seleccioneu un node amb almenys la versió 3+."
+  "commitment_unsupported": "El node seleccionat actualment no admet el compromís de mineria. Seleccioneu un node amb almenys la versió 3+.",
+  "click_for_request": "Feu clic per crear una sol·licitud de pagament que puguin utilitzar tercers",
+  "copy_account_address_extended": "Copia l'adreça ampliada",
+  "copy_account_publickey": "Copia la clau pública"
 }
