--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -1059,5 +1059,8 @@
   "error_set_commitment": "Error while updating mining commitment. Mind that you need to wait 1440 blocks before you can revoke your commitment.",
   "commitment_blocks_enabled": "blocks missing until commitment can be revoked",
   "no_reward_recipient": "You have no reward recipient set yet",
-  "commitment_unsupported": "The currently selected Node does not support Mining Commitment. Please select a Node with at least Version 3+."
+  "commitment_unsupported": "The currently selected Node does not support Mining Commitment. Please select a Node with at least Version 3+.",
+  "click_for_request": "Click to create a payment request that can be used by third parties",
+  "copy_account_address_extended": "Copy Extended Address",
+  "copy_account_publickey": "Copy Public Key"
 }
