--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -1046,5 +1046,8 @@
   "error_set_commitment": "Erreur lors de la mise à jour de l'engagement de minage. N'oubliez pas que vous devez attendre 1440 blocs avant de pouvoir révoquer votre engagement.",
   "commitment_blocks_enabled": "blocs manquants jusqu'à ce que l'engagement puisse être révoqué",
   "no_reward_recipient": "Vous n'avez pas encore défini de récipiendaires de récompense",
-  "commitment_unsupported": "Le nœud actuellement sélectionné ne prend pas en charge l'engagement minier. Veuillez sélectionner un nœud avec au moins la version 3+."
+  "commitment_unsupported": "Le nœud actuellement sélectionné ne prend pas en charge l'engagement minier. Veuillez sélectionner un nœud avec au moins la version 3+.",
+  "click_for_request": "Cliquez pour créer une demande de paiement utilisable par des tiers",
+  "copy_account_address_extended": "Copier l'adresse étendue",
+  "copy_account_publickey": "Copier la clé publique"
 }
