--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -1046,5 +1046,8 @@
   "error_set_commitment": "खनन प्रतिबद्धता को अपडेट करते समय त्रुटि। मन कि आप अपनी प्रतिबद्धता को रद्द कर सकते हैं इससे पहले कि आप 1440 ब्लॉक इंतजार करने की जरूरत है।",
   "commitment_blocks_enabled": "जब तक प्रतिबद्धता को रद्द नहीं किया जा सकता तब तक ब्लॉक",
   "no_reward_recipient": "आपके पास अभी तक कोई पुरस्कार प्राप्तकर्ता सेट नहीं है",
-  "commitment_unsupported": "वर्तमान में चयनित नोड माइनिंग कमिटमेंट का समर्थन नहीं करता है। कृपया कम से कम संस्करण 3+ वाले नोड का चयन करें।"
+  "commitment_unsupported": "वर्तमान में चयनित नोड माइनिंग कमिटमेंट का समर्थन नहीं करता है। कृपया कम से कम संस्करण 3+ वाले नोड का चयन करें।",
+  "click_for_request": "भुगतान अनुरोध बनाने के लिए क्लिक करें जिसका उपयोग तीसरे पक्ष द्वारा किया जा सकता है",
+  "copy_account_address_extended": "विस्तारित पते की प्रतिलिपि बनाएँ",
+  "copy_account_publickey": "सार्वजनिक कुंजी की प्रतिलिपि बनाएँ"
 }
