--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -1046,5 +1046,8 @@
   "error_set_commitment": "Pogreška prilikom ažuriranja obveze rudarstva. Imajte na umu da trebate pričekati 1440 blokova prije nego što možete opozvati svoju obvezu.",
   "commitment_blocks_enabled": "nedostaju blokovi dok se obveza ne može opozvati",
   "no_reward_recipient": "Još niste postavili primatelja nagrade",
-  "commitment_unsupported": "Trenutno odabrani čvor ne podržava obvezu rudarstva. Odaberite čvor s najmanje verzijom 3+."
+  "commitment_unsupported": "Trenutno odabrani čvor ne podržava obvezu rudarstva. Odaberite čvor s najmanje verzijom 3+.",
+  "click_for_request": "Kliknite da biste stvorili zahtjev za plaćanje koji mogu koristiti treće strane",
+  "copy_account_address_extended": "Kopirajte proširenu adresu",
+  "copy_account_publickey": "Kopiraj javni ključ"
 }
