--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -1046,5 +1046,8 @@
   "error_set_commitment": "Errore durante l'aggiornamento dell'impegno di mining. Tieni presente che devi attendere 1440 blocchi prima di poter revocare il tuo impegno.",
   "commitment_blocks_enabled": "blocchi mancanti fino alla revoca dell'impegno",
   "no_reward_recipient": "Non hai ancora impostato un destinatario della ricompensa",
-  "commitment_unsupported": "Il nodo attualmente selezionato non supporta l'impegno di mining. Seleziona un nodo con almeno la versione 3+."
+  "commitment_unsupported": "Il nodo attualmente selezionato non supporta l'impegno di mining. Seleziona un nodo con almeno la versione 3+.",
+  "click_for_request": "Fare clic per creare una richiesta di pagamento che può essere utilizzata da terze parti",
+  "copy_account_address_extended": "Copia indirizzo esteso",
+  "copy_account_publickey": "Copia chiave pubblica"
 }
