--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -1046,5 +1046,8 @@
   "error_set_commitment": "マイニングコミットメントの更新中にエラーが発生しました。コミットメントを取り消すには、1440ブロック待つ必要があることに注意してください。",
   "commitment_blocks_enabled": "コミットメントを取り消すことができるまでブロックが欠落している",
   "no_reward_recipient": "報酬の受取人はまだ設定されていません",
-  "commitment_unsupported": "現在選択されているノードは、マイニングコミットメントをサポートしていません。バージョン3以降のノードを選択してください。"
+  "commitment_unsupported": "現在選択されているノードは、マイニングコミットメントをサポートしていません。バージョン3以降のノードを選択してください。",
+  "click_for_request": "クリックして、サードパーティが使用できる支払いリクエストを作成します",
+  "copy_account_address_extended": "拡張アドレスをコピーする",
+  "copy_account_publickey": "公開鍵をコピーする"
 }
