--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -1055,5 +1055,8 @@
   "error_set_commitment": "Błąd podczas aktualizowania zobowiązania do wydobywania. Pamiętaj, że musisz odczekać 1440 bloków, zanim będziesz mógł odwołać swoje zobowiązanie.",
   "commitment_blocks_enabled": "brakujące bloki do czasu odwołania zobowiązania",
   "no_reward_recipient": "Nie masz jeszcze ustawionego odbiorcy nagrody",
-  "commitment_unsupported": "Aktualnie wybrany węzeł nie obsługuje zobowiązania do wydobywania. Wybierz węzeł z co najmniej wersją 3+."
+  "commitment_unsupported": "Aktualnie wybrany węzeł nie obsługuje zobowiązania do wydobywania. Wybierz węzeł z co najmniej wersją 3+.",
+  "click_for_request": "Kliknij, aby utworzyć żądanie płatności, z którego mogą korzystać osoby trzecie",
+  "copy_account_address_extended": "Kopiuj adres rozszerzony",
+  "copy_account_publickey": "Kopiuj klucz publiczny"
 }
