--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -1046,5 +1046,8 @@
   "error_set_commitment": "Eroare la actualizarea angajamentului minier. Rețineți că trebuie să așteptați 1440 de blocuri înainte de a vă putea revoca angajamentul.",
   "commitment_blocks_enabled": "blocurile lipsesc până când angajamentul poate fi revocat",
   "no_reward_recipient": "Nu aveți încă set de destinatar de recompensă",
-  "commitment_unsupported": "Nodul selectat în prezent nu acceptă Angajamentul minier. Vă rugăm să selectați un nod cu cel puțin versiunea 3+."
+  "commitment_unsupported": "Nodul selectat în prezent nu acceptă Angajamentul minier. Vă rugăm să selectați un nod cu cel puțin versiunea 3+.",
+  "click_for_request": "Faceți clic pentru a crea o solicitare de plată care poate fi utilizată de terți",
+  "copy_account_address_extended": "Copiați adresa extinsă",
+  "copy_account_publickey": "Copiați cheia publică"
 }
