--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -1046,5 +1046,8 @@
   "error_set_commitment": "Madencilik taahhüdü güncellenirken hata oluştu. Taahhüdünüzü iptal etmeden önce 1440 blok beklemeniz gerektiğini unutmayın.",
   "commitment_blocks_enabled": "taahhüt iptal edilebilene kadar eksik bloklar",
   "no_reward_recipient": "Henüz bir ödül alıcınız yok",
-  "commitment_unsupported": "Şu anda seçili olan Düğüm, Madencilik Taahhütünü desteklemiyor. Lütfen en az Sürüm 3+ olan bir Düğüm seçin."
+  "commitment_unsupported": "Şu anda seçili olan Düğüm, Madencilik Taahhütünü desteklemiyor. Lütfen en az Sürüm 3+ olan bir Düğüm seçin.",
+  "click_for_request": "Üçüncü şahıslar tarafından kullanılabilecek bir ödeme talebi oluşturmak için tıklayın",
+  "copy_account_address_extended": "Genişletilmiş Adresi Kopyala",
+  "copy_account_publickey": "Genel Anahtarı Kopyala"
 }
