feat: auto node selection

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -1049,5 +1049,11 @@
   "commitment_unsupported": "Понастоящем избраният възел не поддържа задължение за копаене. Моля, изберете възел с поне версия 3+.",
   "click_for_request": "Щракнете, за да създадете заявка за плащане, която може да се използва от трети страни",
   "copy_account_address_extended": "Копирайте разширения адрес",
-  "copy_account_publickey": "Копирайте публичния ключ"
+  "copy_account_publickey": "Копирайте публичния ключ",
+  "manual_nodeselection": "Ръчен избор на възел",
+  "automatic_nodeselection": "Автоматичен избор на възел",
+  "no_reliable_node_reachable": "Не можа да се достигне до надежден възел. Моля, проверете дали имате връзка с интернет.",
+  "node_successfully_connected": "Успешно свързан с възела",
+  "selected_node": "В момента избран възел",
+  "toggle_nodeselection_mode": "Превключете, за да превключвате между ръчен или автоматичен избор на възел"
 }
