--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -1049,5 +1049,11 @@
   "commitment_unsupported": "Ο τρέχων επιλεγμένος κόμβος δεν υποστηρίζει Mining Commitment. Επιλέξτε έναν κόμβο με τουλάχιστον έκδοση 3+.",
   "click_for_request": "Κάντε κλικ για να δημιουργήσετε ένα αίτημα πληρωμής που μπορεί να χρησιμοποιηθεί από τρίτους",
   "copy_account_address_extended": "Αντιγραφή εκτεταμένης διεύθυνσης",
-  "copy_account_publickey": "Αντιγραφή δημόσιου κλειδιού"
+  "copy_account_publickey": "Αντιγραφή δημόσιου κλειδιού",
+  "manual_nodeselection": "Μη αυτόματη επιλογή κόμβου",
+  "automatic_nodeselection": "Αυτόματη επιλογή κόμβου",
+  "no_reliable_node_reachable": "Δεν ήταν δυνατή η εύρεση αξιόπιστου κόμβου. Παρακαλώ, επαληθεύστε εάν έχετε σύνδεση στο Διαδίκτυο.",
+  "node_successfully_connected": "Συνδέθηκε με επιτυχία στον κόμβο",
+  "selected_node": "Επιλεγμένος κόμβος",
+  "toggle_nodeselection_mode": "Εναλλαγή για εναλλαγή μεταξύ χειροκίνητης ή αυτόματης επιλογής κόμβων"
 }
