--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -1049,5 +1049,11 @@
   "commitment_unsupported": "वर्तमान में चयनित नोड माइनिंग कमिटमेंट का समर्थन नहीं करता है। कृपया कम से कम संस्करण 3+ वाले नोड का चयन करें।",
   "click_for_request": "भुगतान अनुरोध बनाने के लिए क्लिक करें जिसका उपयोग तीसरे पक्ष द्वारा किया जा सकता है",
   "copy_account_address_extended": "विस्तारित पते की प्रतिलिपि बनाएँ",
-  "copy_account_publickey": "सार्वजनिक कुंजी की प्रतिलिपि बनाएँ"
+  "copy_account_publickey": "सार्वजनिक कुंजी की प्रतिलिपि बनाएँ",
+  "manual_nodeselection": "मैनुअल नोड चयन",
+  "automatic_nodeselection": "स्वचालित नोड चयन",
+  "no_reliable_node_reachable": "किसी भी विश्वसनीय नोड तक नहीं पहुंच सका। यदि आपके पास इंटरनेट कनेक्शन है, तो कृपया सत्यापित करें।",
+  "node_successfully_connected": "सफलतापूर्वक नोड से जुड़ा है",
+  "selected_node": "वर्तमान में चयनित नोड",
+  "toggle_nodeselection_mode": "मैन्युअल या स्वचालित नोड चयन के बीच स्विच करने के लिए टॉगल करें"
 }
