--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -1049,5 +1049,11 @@
   "commitment_unsupported": "Текущий выбранный узел не поддерживает обязательства по майнингу. Выберите узел как минимум с версией 3+.",
   "click_for_request": "Нажмите, чтобы создать запрос на оплату, который может использоваться третьими сторонами",
   "copy_account_address_extended": "Копировать расширенный адрес",
-  "copy_account_publickey": "Копировать открытый ключ"
+  "copy_account_publickey": "Копировать открытый ключ",
+  "manual_nodeselection": "Ручной выбор узла",
+  "automatic_nodeselection": "Автоматический выбор узла",
+  "no_reliable_node_reachable": "Не удалось связаться ни с одним надежным узлом. Пожалуйста, проверьте, есть ли у вас подключение к Интернету.",
+  "node_successfully_connected": "Успешно подключился к узлу",
+  "selected_node": "Текущий выбранный узел",
+  "toggle_nodeselection_mode": "Переключитесь, чтобы переключаться между ручным или автоматическим выбором узла"
 }
