--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -1049,5 +1049,11 @@
   "commitment_unsupported": "Тренутно изабрани чвор не подржава обавезу рударства. Изаберите чвор са најмање верзијом 3+.",
   "click_for_request": "Кликните да бисте креирали захтев за плаћање који могу користити треће стране",
   "copy_account_address_extended": "Копирајте проширену адресу",
-  "copy_account_publickey": "Копирај јавни кључ"
+  "copy_account_publickey": "Копирај јавни кључ",
+  "manual_nodeselection": "Ручни избор чвора",
+  "automatic_nodeselection": "Аутоматски избор чвора",
+  "no_reliable_node_reachable": "Није могуће доћи до ниједног поузданог чвора. Молимо вас да проверите да ли имате интернет везу.",
+  "node_successfully_connected": "Успешно повезан са чвором",
+  "selected_node": "Тренутно изабрани чвор",
+  "toggle_nodeselection_mode": "Пребаците за пребацивање између ручног или аутоматског избора чвора"
 }
