--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -1049,5 +1049,11 @@
   "commitment_unsupported": "O nodo seleccionado actualmente non admite o compromiso de minería. Seleccione un nodo con polo menos a versión 3+.",
   "click_for_request": "Fai clic para crear unha solicitude de pagamento que poida ser utilizada por terceiros",
   "copy_account_address_extended": "Copia o enderezo ampliado",
-  "copy_account_publickey": "Copiar clave pública"
+  "copy_account_publickey": "Copiar clave pública",
+  "manual_nodeselection": "Selección manual de nodos",
+  "automatic_nodeselection": "Selección automática de nodos",
+  "no_reliable_node_reachable": "Non se puido alcanzar ningún nodo fiable. Verifique se ten conexión a Internet.",
+  "node_successfully_connected": "Conectouse correctamente ao nodo",
+  "selected_node": "Nodo seleccionado actualmente",
+  "toggle_nodeselection_mode": "Alternar para cambiar entre a selección de nodos manual ou automática"
 }
