--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -1049,5 +1049,11 @@
   "commitment_unsupported": "Aktuálne vybraný uzol nepodporuje ťažobný záväzok. Vyberte uzol s minimálne verziou 3+.",
   "click_for_request": "Kliknutím vytvoríte žiadosť o platbu, ktorú môžu použiť tretie strany",
   "copy_account_address_extended": "Skopírujte rozšírenú adresu",
-  "copy_account_publickey": "Kopírovať verejný kľúč"
+  "copy_account_publickey": "Kopírovať verejný kľúč",
+  "manual_nodeselection": "Ručný výber uzla",
+  "automatic_nodeselection": "Automatický výber uzla",
+  "no_reliable_node_reachable": "Nepodarilo sa dosiahnuť žiadny spoľahlivý uzol. Skontrolujte, či máte internetové pripojenie.",
+  "node_successfully_connected": "Úspešne pripojené k uzlu",
+  "selected_node": "Aktuálne vybraný uzol",
+  "toggle_nodeselection_mode": "Prepínaním prepínate medzi manuálnym alebo automatickým výberom uzla"
 }
