--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -1049,5 +1049,11 @@
   "commitment_unsupported": "Наразі вибраний Вузол не підтримує зобов'язання Майнінг. Виберіть вузол із принаймні версією 3+.",
   "click_for_request": "Натисніть, щоб створити платіжний запит, яким можуть скористатися треті сторони",
   "copy_account_address_extended": "Скопіюйте розширену адресу",
-  "copy_account_publickey": "Скопіюйте відкритий ключ"
+  "copy_account_publickey": "Скопіюйте відкритий ключ",
+  "manual_nodeselection": "Вибір вузла вручну",
+  "automatic_nodeselection": "Автоматичний вибір вузла",
+  "no_reliable_node_reachable": "Не вдалося досягти жодного надійного вузла. Будь ласка, перевірте, чи є у вас підключення до Інтернету.",
+  "node_successfully_connected": "Успішно підключено до вузла",
+  "selected_node": "Наразі вибраний вузол",
+  "toggle_nodeselection_mode": "Перемикайте, щоб перемикатися між ручним або автоматичним вибором вузлів"
 }
